add pip install for numpy

--- a/asr-python-advanced-tao-ngram-pretrain.ipynb
+++ b/asr-python-advanced-tao-ngram-pretrain.ipynb
@@ -216,9 +216,12 @@
     "Scripts to download and preprocess LibriSpeech dev-clean\n",
     "\"\"\"\n",
     "from multiprocessing import Pool\n",
-    "\n",
-    "import numpy\n",
-    "\n",
+    "try:\n",
+    "    import numpy\n",
+    "except ImportError:\n",
+    "    import subprocess\n",
+    "    subprocess.check_output('pip3 install numpy', shell=True)\n",
+    "    \n",
     "LOG_STR = \" To regenerate this file, please, remove it.\"\n",
     "\n",
     "def find_transcript_files(dir):\n",
