Add new training dataset

--- a/asr-python-advanced-tao-ngram-pretrain.ipynb
+++ b/asr-python-advanced-tao-ngram-pretrain.ipynb
@@ -26,7 +26,9 @@
     "In this tutorial, we will pretrain Riva ASR language modeling (n-gram) with TAO Toolkit. <br> \n",
     "To understand the basics of Riva ASR APIs, refer to [Getting started with Riva ASR in Python](https://github.com/nvidia-riva/tutorials/blob/dev/22.04/asr-python-basics.ipynb). <br>\n",
     "\n",
-    "For more information about Riva, refer to the [Riva developer documentation](https://developer.nvidia.com/riva)."
+    "For more information about Riva, refer to the [Riva developer documentation](https://developer.nvidia.com/riva).\n",
+    "\n",
+    "**Prerequisite**: You have access and are logged into NVIDIA NGC. For step-by-step instructions, refer to the [NGC Getting Started Guide.](https://docs.nvidia.com/ngc/ngc-overview/index.html#registering-activating-ngc-account)"
    ]
   },
   {
@@ -395,8 +397,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure the source directories exist, if not, create them, Provide aboslute Paths\n",
-    "SPECS_DIR_LOCAL = \"<YOUR_PATH_TO_SPECS_DIR>\"\"\n",
+    "# Make sure the source directories  mentioned above exist, if not, create them. Provide aboslute Paths\n",
+    "SPECS_DIR_LOCAL = \"<YOUR_PATH_TO_SPECS_DIR>\"\n",
     "RESULT_DIR_LOCAL = \"<YOUR_PATH_TO_RESULTS_DIR>\"\n",
     "CACHE_DIR_LOCAL = \"<YOUR_PATH_TO_CACHE_DIR>\"\n",
     "! mkdir $SPECS_DIR_LOCAL\n",
@@ -731,26 +733,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Riva skills version\n",
-    "RIVA_VERSION=\"2.6.0\"\n",
+    "# # Riva skills version\n",
+    "# RIVA_VERSION=\"2.7.0\"\n",
     "\n",
-    "# ServiceMaker Docker\n",
-    "RIVA_SM_CONTAINER = f\"nvcr.io/nvidia/riva/riva-speech:{RIVA_VERSION}-servicemaker\"\n",
+    "# # ServiceMaker Docker\n",
+    "# RIVA_SM_CONTAINER = f\"nvcr.io/nvidia/riva/riva-speech:{RIVA_VERSION}-servicemaker\"\n",
     "\n",
-    "# Riva API Docker\n",
-    "RIVA_API_CONTAINER =f\"nvcr.io/nvidia/riva/riva-speech:{RIVA_VERSION}\"\n",
+    "# # Riva API Docker\n",
+    "# RIVA_API_CONTAINER =f\"nvcr.io/nvidia/riva/riva-speech:{RIVA_VERSION}\"\n",
     "\n",
-    "# Directory where the create model repo\n",
-    "MODEL_LOC = \"<YOUR_PATH_TO_MODEL_REPO>\"\n",
+    "# # Directory where the create model repo\n",
+    "# MODEL_LOC = \"<YOUR_PATH_TO_MODEL_REPO>\"\n",
     "\n",
-    "# Name of the .riva file\n",
-    "MODEL_NAME = \"nvidia/tao/speechtotext_en_us_citrinet:deployable_v3.0\"\n",
+    "# # Name of the .riva file\n",
+    "# MODEL_NAME = \"nvidia/tao/speechtotext_en_us_citrinet:deployable_v3.0\"\n",
     "\n",
-    "# Key that model is encrypted with, while exporting with TAO\n",
-    "KEY = \"tlt_encode\"\n",
+    "# # Key that model is encrypted with, while exporting with TAO\n",
+    "# KEY = \"tlt_encode\"\n",
     "\n",
-    "# NGC API KEY, can be generated from ngc.nvidia.com/setup\n",
-    "NGC_API_KEY=\"<YOUR_NGC_API_KEY>\""
+    "# # NGC API KEY, can be generated from ngc.nvidia.com/setup\n",
+    "# NGC_API_KEY=\"<YOUR_NGC_API_KEY>\""
    ]
   },
   {
@@ -1090,7 +1092,11 @@
     "\n",
     "\n",
     "### Downloading and procesing domain data (healthcare) for LM finetuning\n",
-    "We can make use of reddit data for this purpose. It is a collection of Corpuses of Reddit data built from Pushshift.io Reddit Corpus. Each Corpus contains posts and comments from an individual subreddit from its inception until Oct 2018."
+    "For the purpose of finetuning on healthcare domain we can make use of Kaggle dataset PubMed 200k RCT: a Dataset for Sequential Sentence Classification in Medical Abstracts. [https://arxiv.org/abs/1710.06071] <br>\n",
+    "This dataset is available at https://www.kaggle.com/datasets/anshulmehtakaggl/200000-abstracts-for-seq-sentence-classification <br>\n",
+    "Please follow the instructions to install and authenticate Kaggle API https://www.kaggle.com/docs/api \n",
+    "<br>\n",
+    "**Note**: *Each user is responsible for checking the content of datasets and the applicable licenses and determining if suitable for the intended use*\n"
    ]
   },
   {
@@ -1099,7 +1105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install convokit"
+    "!kaggle datasets download -d anshulmehtakaggl/200000-abstracts-for-seq-sentence-classification"
    ]
   },
   {
@@ -1108,8 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from convokit import Corpus, download\n",
-    "corpus = Corpus(download('subreddit-healthcare'))"
+    "!unzip -d $DATA_DOWNLOAD_DIR 200000-abstracts-for-seq-sentence-classification.zip"
    ]
   },
   {
@@ -1126,11 +1131,15 @@
     "    if len(text.split())> 5:\n",
     "        return text.strip()\n",
     "    \n",
-    "with open(f'{DATA_DOWNLOAD_DIR}/domain_data_all.txt', 'w') as file:\n",
-    "    for utt in corpus.iter_utterances():\n",
-    "        text = clean_text(utt.text)\n",
+    "# Using dev file since we want a small amount of finetuning data. For better text Normalization use NeMo [https://github.com/NVIDIA/NeMo/tree/main/nemo_text_processing]\n",
+    "with open(f'{DATA_DOWNLOAD_DIR}/20k_abstracts_numbers_with_@/dev.txt') as file, open(f'{DATA_DOWNLOAD_DIR}/domain_data_all.txt', 'w') as outfile:\n",
+    "    for line in file:\n",
+    "        if line.startswith(\"###\") or not line.strip():\n",
+    "            continue\n",
+    "        _, text = line.strip().split('\\t')\n",
+    "        text = clean_text(text)\n",
     "        if text:\n",
-    "            file.write(text+'\\n')\n",
+    "            outfile.write(text+'\\n')\n",
     "            \n",
     "# Picking top 10000 lines from dataset\n",
     "! head -10000 $DATA_DOWNLOAD_DIR/domain_data_all.txt > $DATA_DOWNLOAD_DIR/domain_data.txt"
@@ -1217,7 +1226,7 @@
    "outputs": [],
    "source": [
     "# Generate new model repo with interpolated LM. Set absolute path to create MODEL_LOC_DOMAIN\n",
-    "MODEL_LOC_DOMAIN = \"<YOUR_PATH_TO_DOMAIN_MODEL_REPO>\"\n",
+    "MODEL_LOC_DOMAIN = \"<PATH_TO_DOMAIN_MODEL_REPO_LOCATION>\"\n",
     "! mkdir $MODEL_LOC_DOMAIN\n",
     "! cp $MODEL_LOC/Citrinet.riva $MODEL_LOC_DOMAIN/\n",
     "! docker run -it --rm --gpus 0 -v $MODEL_LOC_DOMAIN:/data \\\n",
@@ -1371,13 +1380,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We were able to significantly reduce the size of LM. Lets see the impact of pruned LM on ASR's accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Lets deploy ASR server with Pruned LM, Set absolute path to create MODEL_LOC_PRUNED\n",
-    "MODEL_LOC_PRUNED = \"<YOUR_PATH_TO_PRUNING_MODEL_REPO>\"\n",
+    "MODEL_LOC_PRUNED = \"PATH_TO_PRUNED_MODEL_REPO_LOCATION\"\n",
     "\n",
     "#export to Riva format \n",
     "!tao n_gram export \\\n",
@@ -1472,8 +1488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pruning drops some of low probabiliy N-grams from Lnaguage model. This can affect models in both ways.\n",
-    "For our case, we were able to improve model performance by reducing the perplexity of Language model. "
+    "Pruning drops some low probabiliy N-grams from Lnaguage model. This can sometime help improve ASR model's accuracy by reducing the perplexity of Language model. "
    ]
   }
  ],
