add instruction to use notebook with superuser access

--- a/asr-python-advanced-tao-ngram-pretrain.ipynb
+++ b/asr-python-advanced-tao-ngram-pretrain.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "For more information about Riva, refer to the [Riva developer documentation](https://developer.nvidia.com/riva).\n",
     "\n",
-    "**Prerequisite**: You have access and are logged into NVIDIA NGC. For step-by-step instructions, refer to the [NGC Getting Started Guide.](https://docs.nvidia.com/ngc/ngc-overview/index.html#registering-activating-ngc-account)"
+    "**Prerequisite**: You have access and are logged into NVIDIA NGC. For step-by-step instructions, refer to the [NGC Getting Started Guide.](https://docs.nvidia.com/ngc/ngc-overview/index.html#registering-activating-ngc-account)\n",
+    "\n",
+    "**Note**: Since dockers are getting used, it is recommended to use this notebook with Superuser access"
    ]
   },
   {
@@ -1257,7 +1259,12 @@
    "outputs": [],
    "source": [
     "# Update riva_model_loc in riva_quickstart config file to MODEL_LOC_DOMAIN\n",
-    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_stop.sh && ./riva_start.sh config.sh"
+    "\n",
+    "# Close the current riva server session if running\n",
+    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_stop.sh\n",
+    "\n",
+    "# Start the Riva server with models from MODEL_LOC_DOMAIN\n",
+    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_start.sh config.sh"
    ]
   },
   {
@@ -1440,7 +1447,12 @@
    "outputs": [],
    "source": [
     "# Update riva_model_loc in riva_quickstart config file to MODEL_LOC_PRUNED and then start server\n",
-    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_stop.sh && ./riva_start.sh config.sh"
+    "\n",
+    "# Close the current riva server session if running\n",
+    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_stop.sh\n",
+    "\n",
+    "# Start the Riva server with models from MODEL_LOC_PRUNED\n",
+    "! cd riva_quickstart_v$RIVA_VERSION && ./riva_start.sh config.sh"
    ]
   },
   {
